version/0.30/_sources/api/solver/_autosummary/settings/pressure_far_field.rst.txt
:orphan:

.. _pressure_far_field:

pressure_far_field
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.pressure_far_field
    :show-inheritance:

.. rubric:: Methods

========================================   =====================================================

Method                                                                                   Summary

========================================   =====================================================
:ref:`create <create_1>`                       Create a new instance of the current object type.

:ref:`delete <delete_1>`                                                Delete selected objects.

:ref:`rename <rename>`                                                        Rename the object.

:ref:`list <list>`                                                List the names of the objects.

:ref:`list_properties <list_properties>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                    Create a copy of the object.

========================================   =====================================================

.. rubric:: Named object type

:ref:`pressure_far_field_child <pressure_far_field_child>`


.. rubric:: Included in:

================================================   ===================================

Parent                                                                         Summary

================================================   ===================================
:ref:`boundary_conditions <boundary_conditions>`       The boundary conditions object.

================================================   ===================================

