version/0.38/_sources/api/solver/_autosummary/settings/pressure_far_field.rst.txt
:orphan:

.. _pressure_far_field:

pressure_far_field
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.pressure_far_field
    :show-inheritance:

.. rubric:: Methods

============================================   =========================================

Method                                                                           Summary

============================================   =========================================
:ref:`create <create_6>`                                             Crate new boundary.

:ref:`delete <delete>`                                          Delete selected objects.

:ref:`rename <rename>`                                                Rename the object.

:ref:`list_1 <list_1>`                                    List the names of the objects.

:ref:`list_properties_1 <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                            Create a copy of the object.

============================================   =========================================

.. rubric:: Named object type

:ref:`pressure_far_field_child <pressure_far_field_child>`


.. rubric:: Included in:

==============================   ===================================================

Parent                                                                       Summary

==============================   ===================================================
:ref:`boundaries <boundaries>`       Defines physics boundaries for a volume region.

==============================   ===================================================

